# test-BBQ

./: .env.example  main.py  pyproject.toml  requirements.txt  server.py
agents/: Agent_Node.py  __init__.py  schemas.py
agents/nodes/: __init__.py  analysis_node.py  backend_node.py  code_review_node.py  database_node.py  frontend_node.py  project_manager_node.py  review_manager_node.py  search_node.py  supervisor_node.py  test_runner_node.py  tool_specialist_node.py  worker_base.py  writer_node.py
agents/tools/: __init__.py  workspace.py
agents/utils/: context_manager.py
api/: app.py  job_store.py  schemas.py  worker.py
api/routers/: health.py  jobs.py
app_secrets/: __init__.py  secret_keys.py  secrets_manager.py
config/: __init__.py  model_selector.py  settings.py  systemMessage.py
deploy/: upwork-agent.service
discord_bot/: bot.py  notifier.py
docs/: architecture.md
graph/: __init__.py  diagram_spec.py  workflow.py
rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
secrets/: __init__.py  secret_keys.py  secrets_manager.py
tests/: test_function_calling.py
tools/: __init__.py  generate_diagram.py  tool_registry.py
