[project]
name = "upwork-multiagent-rag"
version = "1.3.0"
description = "UpWork multi-agent RAG system built with LangGraph and Claude"
readme = "docs/architecture.md"
requires-python = ">=3.11"

dependencies = [
    # Anthropic / Claude
    "anthropic>=0.40.0",
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    # LangGraph (マルチエージェント / StateGraph / Send API)
    "langgraph>=0.2.0",
    # Vector store
    "faiss-cpu>=1.8.0",
    # AWS Secrets Manager
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "boto3-stubs[secretsmanager]>=1.34.0",
]

[project.scripts]
generate-diagram = "tools.generate_diagram:main"

# ─────────────────────────────────────────────────────────────────────────────
# uv
# ─────────────────────────────────────────────────────────────────────────────

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "boto3-stubs[secretsmanager]>=1.34.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff (lint + format)
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "config", "graph", "rag", "secrets", "tools"]

# ─────────────────────────────────────────────────────────────────────────────
# Mypy (型チェック)
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true
exclude                = ["docs/", "data/"]

# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
python_files = ["test_*.py"]

# ─────────────────────────────────────────────────────────────────────────────
# Build backend (uv native)
# ─────────────────────────────────────────────────────────────────────────────

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "config", "graph", "rag", "secrets", "tools"]
